--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Dr. Zekun Guo"
 title_separator          : "-"
 name                     : &name "Dr. Zekun Guo"
 description              : &description "Lecturer at University of Hull"
-url                      : https://zekunguo-profile.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zekunguo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zekunguo.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
